# NutriAI

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  migrate_db.py  nutriai.db  nutriai_v2.db  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  setup.py  test_hash.py  test_login.py  test_registration.py
backend/: auth.py  database.py  main.py  models.py  requirements.txt  schemas.py
backend/model/: train_model.py
backend/routes/: ai.py  auth.py  history.py  predict.py
backend/services/: ai_engine.py  insights.py  nutrition_service.py  recommendation.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Navbar.jsx
frontend/src/components/ui/: Button.jsx  Card.jsx  Input.jsx  Layout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Predict.jsx  Register.jsx
frontend/src/services/: api.js
